------------------------------------------------------------------------

2012-01-23

* use of PWRMGT_DEFAULT makro in rfm12_config.h deprecated. wakeup timer and
  low battery detector handle this automatic.
* RFM12_USE_CLOCK_OUTPUT makro added for config file. this turns on the clock output
* RFM12_CLOCK_OUT_FREQUENCY makro to configure clock output
* RFM12_LBD_VOLTAGE makro and constants for configuring LBD voltage
* Support for RFM12BP fixed.

------------------------------------------------------------------------

2012-01-22

Merged changes from Hansinators 1.1 Version
* code size improvement
* some minor stuff

------------------------------------------------------------------------

2012-01-22

* interrupt deadlock bug fixed: if interrupt handler was executing while
  the interrupt condition occurred, the interrupt line stayed low, and interrupt
  was never entered again (edge triggered). This is now fixed by looping in
  the interrupt handler until no interrupt conditions are present.
* Support form RFM12BP added. Tested working.
* more RFM12 parameters adjustable in config file
 
------------------------------------------------------------------------

2010-07-11 13:37:00 +0100 (Sun, 11 Jul 2010)
* branch in 1.2-dev
* implemented callback function for receiving
* old (unused) config variable "LOW_POWER" removed from demo config
* rfm12_ctrl extended with several functions
* implemented delayed execution of rf12 instructions at the end of the interrupt/polling routine
* corrected TXCONF_POWER_* bitmasks according to current revision of the datasheet

------------------------------------------------------------------------

2010-01-09 19:40:33 +0100 (Sat, 09 Jan 2010)
nur jedes 2.te Packet wurde gesendet - vielen Dank an werner.baumann at t-online.de

------------------------------------------------------------------------

2009-11-30 21:22:02 +0100 (Mon, 30 Nov 2009)
fixed frequency calculation
