@@ -1,2 +1,4 @@
 
-#define UART_BAUD_RATE 19200
+#define UART_BAUD_RATE 115200
+
+#define UART_HEXDUMP
